feat: add sync endpoint
