# pkg/generated/goserver/api_sync_service.go
@@ -1,0 +1,52 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * Diary - OpenAPI 3.0
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 0.0.1
+ * Contact: ilya.korolev@outlook.com
+ */
+
+package goserver
+
+import (
+	"context"
+	"errors"
+	"net/http"
+)
+
+// SyncAPIService is an interface that defines the logic for the SyncAPIServicer
+type SyncAPIService interface {
+	// GetChanges - get changes for synchronization
+	GetChanges(ctx context.Context, since int32, limit int32) (ImplResponse, error)
+}
+
+// SyncAPIService is a service that implements the logic for the SyncAPIServicer
+// This service should implement the business logic for every endpoint for the SyncAPI API.
+// Include any external packages or services that will be required by this service.
+type SyncAPIServiceImpl struct {
+}
+
+// NewSyncAPIService creates a default api service
+func NewSyncAPIService() SyncAPIService {
+	return &SyncAPIServiceImpl{}
+}
+
+// GetChanges - get changes for synchronization
+func (s *SyncAPIServiceImpl) GetChanges(ctx context.Context, since int32, limit int32) (ImplResponse, error) {
+	// TODO - update GetChanges with the required logic for this service method.
+	// Add api_sync_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
+
+	// TODO: Uncomment the next line to return response Response(200, SyncResponse{}) or use other options such as http.Ok ...
+	// return Response(200, SyncResponse{}), nil
+
+	// TODO: Uncomment the next line to return response Response(400, {}) or use other options such as http.Ok ...
+	// return Response(400, nil),nil
+
+	// TODO: Uncomment the next line to return response Response(401, {}) or use other options such as http.Ok ...
+	// return Response(401, nil),nil
+
+	return Response(http.StatusNotImplemented, nil), errors.New("GetChanges method not implemented")
+}
